Not perfect but works.