@@ -5,17 +5,16 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.1</version>
+        <version>2.5.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
     <artifactId>car-sharing</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-
+    <version>1.0-SNAPSHOT</version>
 
 
     <properties>
-        <java.version>16</java.version>
+        <java.version>17</java.version>
         <junit.version>5.6.2</junit.version>
         <assertj-core.version>3.16.1</assertj-core.version>
         <mockito-core.version>5.3.1</mockito-core.version>
@@ -24,10 +23,13 @@
 
     <dependencies>
 
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
 
 
         <dependency>
@@ -90,6 +92,13 @@
             <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.5.7.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -100,7 +109,7 @@
                 <version>3.8.1</version>
                 <configuration>
                     <release>17</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+
                 </configuration>
             </plugin>
 
